--- a/openApiDocs/beta/People.yml
+++ b/openApiDocs/beta/People.yml
@@ -6971,7 +6971,7 @@ components:
               nullable: true
             isFavorite:
               type: boolean
-              description: true if the user has flagged this person as a favorite.
+              description: True if the user has flagged this person as a favorite.
               nullable: true
             mailboxType:
               type: string
